--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <th>Zondag</th>
             </tr>
             <tr>
-                <td>
+<!--Maandag-->  <td>
                     Abdominal crunch<br>
                     <a>12 reps - 3 Sets</a>
                 </td>
@@ -27,53 +27,121 @@
                     Leg extension<br>
                     <a>8 reps - 2 Sets</a>
                 </td>
-                <td>Leg extension</td>
-                <td>Legpress machine</td>
-                <td>Barbell squats smith</td>
+                <td>
+                    Latteral pulldown<br>
+                    <a>12 reps - 3 Sets || Wide grip</a>
+                </td>
+                <td>
+                    Chestpress machine<br>
+                    <a>12 reps - 2 Sets</a>
+                </td>
+                <td>
+                    Cardio - Hardlopen<br>
+                    <a>10 kilometer hardlopen, geen stops</a>
+                </td>
             </tr>
             <tr>
-                <td>
+<!--Maandag-->  <td>
                     Incline dumbbell press<br>
                     <a>8 reps - 3 Sets</a>
                 </td>
-                <td>Hamstring machine</td>
-                <td>Hamstring machine</td>
-                <td>Legpress machine</td>
-                <td>Barbell squats smith</td>
-            </tr>
-            <tr>
-                <td>Cable pulldown<br>
+                <td>
+                    Hamstring machine<br>
                     <a>12 reps - 2 Sets</a>
                 </td>
-                <td>Legpress machine</td>
-                <td>Legpress machine</td>
-                <td>Legpress machine</td>
-                <td>Barbell squats smith</td>
+                <td>
+                    Shoulder machine<br>
+                    <a>12 reps - 3 Sets</a>
+                </td>
+                <td>
+                    Legpress machine<br>
+                    <a>8 reps - 3 Sets || Laatste set maxen</a>
+                </td>
+                <td>ㅤ</td>
             </tr>
             <tr>
+<!--Maandag-->  <td>Cable pulldown<br>
+                    <a>12 reps - 2 Sets</a>
+                </td>
                 <td>
+                    Legpress machine<br>
+                    <a>8 reps - 3 Sets || Laatste set maxen</a>
+                </td>
+                <td>
+                    Dumbell lateral raises<br>
+                    <a>6 reps - 3 Sets</a>
+                </td>
+                <td>
+                    Lateral pulldown<br>
+                    <a>12 reps - 2 Sets || Close grip</a>
+                </td>
+                <td>ㅤ</td>
+            </tr>
+            <tr>
+<!--Maandag-->  <td>
                     Hammer curls<br>
                     <a>8 reps - 2 Sets</a>
                 </td>
-                <td>Barbell squats smith</td>
-                <td>Barbell squats smith</td>
-                <td>Legpress machine</td>
-                <td>Barbell squats smith</td>
+                <td>
+                    Barbell squats smith<br>
+                    <a>6 reps - 3 Sets</a>
+                </td>
+                <td>
+                    Pull-up machine<br>
+                    <a>8 reps - 3 Sets</a>
+                </td>
+                <td>
+                    Dumbell chest press<br>
+                    <a>12 reps - 3 Sets</a>
+                </td>
+                <td>ㅤ</td>
             </tr>
             <tr>
-                <td>
+<!--Maandag-->  <td>
                     Latteral pulldown<br>
                     <a>To failure</a>
                 </td>
+                <td>
+                    Biking machine<br>
+                    <a>2 miles - Strength level 25</a>
+                </td>
+                <td>
+                    Dips<br>
+                    <a>8 reps - 2 Sets</a>
+                </td>
+                <td>
+                    Smith machine bench press<br>
+                    <a>12 reps - 3 Sets</a>
+                </td>
+                <td>
+                    ㅤ<br>
+                    <a>ㅤ</a>
+                </td>
             </tr>
             <tr>
-                <td>
+<!--Maandag-->  <td>
                     Treadmill<br>
                     <a>Till the reach of 1 mile</a>
                 </td>
+                <td>
+                    ㅤ<br>
+                    <a>ㅤ</a>
+                </td>
+                <td>
+                    Side-to-side pushups<br>
+                    <a>Until failure - 2 Sets</a>
+                </td>
+                <td>
+                    Dumbell pull-over<br>
+                    <a>12 reps - 2 Sets</a>
+                </td>
+                <td>
+                    ㅤ<br>
+                    <a>ㅤ</a>
+                </td>
             </tr>
         </table>
-        <p>©️ Wiebren || Sportplanning</p>
+        <p><a href="https://wiebren.space/planning/">©️ Wiebren || Sportplanning</a></p>
     </div>
 </body>
 </html>
